[metadata]
name = tankwar
version = 1.0.0
author = Mahdi Khodabandeh
author_email = 20.mahdikh.0@email.com
description = MultiAgent gym environment for reinforcement learning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/khoda81/tankwar
project_urls =
    Bug Tracker = https://github.com/khoda81/tankwar/issues
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    gym>=0.20.0
    pygame>=2.0.1
    numpy>=1.21.2
    pillow>=8.3.2
    pyglet>=1.5.21
    setuptools>=58.0.4
    pymunk>=6.2.0

[options.packages.find]
where = src